# actions

./: .all-contributorsrc  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  renovate.json
.github/: CODEOWNERS
src/tidy_python/: main.py
tests/: test_tidy_python.py
workflows/: codeql.yml  poetry-tests.yaml  release-please.yaml
